# cite-hustle

./: .env.example  .gitignore  ABSTRACT_EXTRACTION.md  ABSTRACT_IMPROVEMENTS_SUMMARY.md  ACTION_PLAN.md  CLAUDE.md  CLI-CHEATSHEET.md  DEBUGGING_SSRN.md  DELIVERABLES_CHECKLIST.md  FILTERING_NON_ARTICLES.md  FIX_0_RESULTS.md  FIX_SUMMARY.md  MATCHING_EXAMPLES.md  METADATA_MIGRATION.md  Makefile  NEXT_STEPS.md  PDF_DOWNLOADER_IMPLEMENTATION.md  README.md  README_SCRAPER_REVIEW.md  READY_TO_DOWNLOAD.md  REVIEW_SUMMARY.txt  SCRAPER_IMPROVEMENTS.md  SELENIUM_IMPLEMENTATION_REVIEW.md  SELENIUM_PDF_DOWNLOADER.md  SELENIUM_STEALTH_ENHANCEMENTS.md  SELENIUM_STEALTH_IMPLEMENTATION.md  SELENIUM_STEALTH_SUMMARY.md  SSRN-PDF-DOWNLOAD-ISSUE.md  SSRN_DETECTION_DECISION_TREE.md  SSRN_MIGRATION.md  SSRN_SCRAPER_CODE_REVIEW_SUMMARY.md  SSRN_SCRAPER_CRITICAL_REVIEW.md  SSRN_SCRAPER_IMPLEMENTATION_GUIDE.md  TESTING_IMPROVEMENTS.md  WARP.md  check_pdf_urls.py  clean_titles.py  debug_ssrn_html.py  debug_ssrn_search_page.html  debug_ssrn_search_results.html  (+10 more)
.github/: copilot-instructions.md
deploy/: README.md  com.citehustle.monthly.plist  com.citehustle.weekly.plist  install.sh  run_pipeline.sh
scripts/: cleanup_bad_ssrn_html.py  cleanup_non_articles.py  debug_search.py  migrate_002_pdf_files.py  migration_guide.py  rebuild_fts.py  reset_failed_scrapes.py  test_metadata.py
src/cite_hustle/: __init__.py  config.py  matching.py  paths.py  pipeline.py  verifier.py
src/cite_hustle/cli/: commands.py
src/cite_hustle/collectors/: fallback_resolvers.py  journals.py  (+6 more)
tests/: test_journals.py
(+6 files in other folders)
